bugfix: устранить overflow

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@
   justify-content: flex-end;
   align-items: center;
   width: 148px;
-  padding-left: 22.5px;
+  padding-left: 19px;
   box-sizing: border-box;
 
   cursor: pointer;
@@ -194,6 +194,9 @@
 .profile__name {
   margin-right: 10px;
   padding: 0;
+  max-width: 80px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   font-size: 14px;
   line-height: 1.2;
